crates/compiler/semantic/tests/snapshots/diagnostics__lib::control_flow::control_flow_paths::test_not_all_paths_return.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::control_flow::control_flow_paths::test_not_all_paths_return"
---
Fixture: lib::control_flow::control_flow_paths::test_not_all_paths_return
============================================================
Source code:

        func test(x: felt) -> felt {
            if (x == 0) {
                return 1;
            }
            // Missing return for else case
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ lib::control_flow::control_flow_paths::test_not_all_paths_return:2:14 ]
   │
 2 │         func test(x: felt) -> felt {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
