crates/compiler/semantic/tests/snapshots/diagnostics__lib::control_flow::missing_returns::test_missing_return_simple.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::control_flow::missing_returns::test_missing_return_simple"
---
Fixture: lib::control_flow::missing_returns::test_missing_return_simple
============================================================
Source code:

        func test() -> felt {
            let x = 42;
            // Missing return statement
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ lib::control_flow::missing_returns::test_missing_return_simple:2:14 ]
   │
 2 │         func test() -> felt {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
