crates/compiler/semantic/tests/snapshots/diagnostics__lib::control_flow::missing_returns::test_nested_missing_return.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::control_flow::missing_returns::test_nested_missing_return"
---
Fixture: lib::control_flow::missing_returns::test_nested_missing_return
============================================================
Source code:

        func test(x: felt) -> felt {
            if (x == 0) {
                if (x == 10) {
                    return 1;
                } else {
                    // Missing return in nested else
                }
            } else {
                return 2;
            }
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ lib::control_flow::missing_returns::test_nested_missing_return:2:14 ]
   │
 2 │         func test(x: felt) -> felt {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
