crates/compiler/semantic/tests/snapshots/diagnostics__lib::control_flow::unreachable_code::test_code_after_if_with_returns.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::control_flow::unreachable_code::test_code_after_if_with_returns"
---
Fixture: lib::control_flow::unreachable_code::test_code_after_if_with_returns
============================================================
Source code:

        func test(x: felt) -> felt {
            if (x == 0) {
                return 1;
            } else {
                return 2;
            }
            let unreachable = 3; // Error: unreachable code
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3001] Warning: Unreachable variable declaration
   ╭─[ lib::control_flow::unreachable_code::test_code_after_if_with_returns:8:13 ]
   │
 8 │             let unreachable = 3; // Error: unreachable code
   │             ──────────┬─────────  
   │                       ╰─────────── Unreachable variable declaration
───╯
