crates/compiler/semantic/tests/snapshots/diagnostics__lib::control_flow::unreachable_code::test_code_after_return.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::control_flow::unreachable_code::test_code_after_return"
---
Fixture: lib::control_flow::unreachable_code::test_code_after_return
============================================================
Source code:

        func test() -> felt {
            return 42;
            let unreachable = 1; // Error: unreachable code
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3001] Warning: Unreachable variable declaration
   ╭─[ lib::control_flow::unreachable_code::test_code_after_return:4:13 ]
   │
 4 │             let unreachable = 1; // Error: unreachable code
   │             ──────────┬─────────  
   │                       ╰─────────── Unreachable variable declaration
───╯
