crates/compiler/semantic/tests/snapshots/diagnostics__lib::control_flow::unreachable_code::test_unreachable_in_complex_control_flow.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::control_flow::unreachable_code::test_unreachable_in_complex_control_flow"
---
Fixture: lib::control_flow::unreachable_code::test_unreachable_in_complex_control_flow
============================================================
Source code:

        func test(x: felt) -> felt {
            if (x == 0) {
                if (x == 10) {
                    return 1;
                } else {
                    return 2;
                }
                let unreachable = 3; // Error: unreachable code
            }
            return 4;
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3001] Warning: Unreachable variable declaration
   ╭─[ lib::control_flow::unreachable_code::test_unreachable_in_complex_control_flow:9:17 ]
   │
 9 │                 let unreachable = 3; // Error: unreachable code
   │                 ──────────┬─────────  
   │                           ╰─────────── Unreachable variable declaration
───╯
